# MuJoCo-Mavlink-Bridge

./: .gitignore  .gitmodules  README.md  main.py  requirements.txt  setup.py  test_new_architecture.py
cpp_sender/: CMakeLists.txt
cpp_sender/include/: mavlink_udp.h  simple_control.h
cpp_sender/src/: main.cpp  mavlink_udp.cpp  periodic_sender.cpp  simple_control.cpp  simple_udp_sender.cpp
docs/: TODOlist.md
examples/: mavlink_sender.py
src/: __init__.py  mavlink_bridge.py  mujoco_controller.py  simulator.py
src/base/: __init__.py  controller.py  mavlink_handler.py  robot_model.py
src/core/: __init__.py  interfaces.py  mavlink_interface.py  mujoco_plant.py  plant.py  types.py
src/implementations/: __init__.py  mavlink_udp_interface.py  mujoco_plant.py
src/robot/: __init__.py  mujoco_controller.py  mujoco_model.py
src/simulation/: __init__.py  config.py  simulator.py
tests/: conftest.py  test_base_classes.py  test_control_mapper.py  test_edge_cases.py  test_integration.py  test_mavlink_bridge.py  test_mujoco_controller.py  test_performance.py  test_robot_model.py  test_simulator.py
